src/test/deca/syntax/parser/invalid/invalid_float_format_point_before.deca
// Test parser, invalid float format car . devant

{
    float x = .5;
}